// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IdeaPageComments /> it should a div with provided class name 1`] = `
<div
  className="idea__comments css-class"
>
  <InjectIntl(CommentSection)
    object="idea1"
    uri="ideas"
  />
</div>
`;

exports[`<IdeaPageComments /> it should render a comment section in a div 1`] = `
<div
  className="idea__comments "
>
  <InjectIntl(CommentSection)
    object="idea1"
    uri="ideas"
  />
</div>
`;
